@@ -1,3 +1,6 @@
+30/06/09 Julien Dutheil
+* BppAncestor: now output expected ancestral states frequencies.
+
 10/06/09 -*- Version 0.4.0 -*-
 
 22/05/09 Julien Dutheil
